version: update to 26.1 and remove chunk ticking