@@ -1,6 +1,6 @@
 package net.treset.adaptiveview.distance;
 
-import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.server.level.ServerPlayer;
 import net.treset.adaptiveview.AdaptiveViewMod;
 import net.treset.adaptiveview.config.Config;
 import net.treset.adaptiveview.config.Rule;
@@ -25,8 +25,6 @@ public class ViewDistanceHandler {
         ArrayList<Integer> viewDistanceIndexes = new ArrayList<>();
         ArrayList<Rule> simDistanceRules = new ArrayList<>();
         ArrayList<Integer> simDistanceIndexes = new ArrayList<>();
-        ArrayList<Rule> chunkTickingRules = new ArrayList<>();
-        ArrayList<Integer> chunkTickingIndexes = new ArrayList<>();
 
         for(int i = 0; i < config.getRules().size(); i++) {
             Rule rule = config.getRules().get(i);
@@ -40,17 +38,12 @@ public class ViewDistanceHandler {
                         simDistanceRules.add(rule);
                         simDistanceIndexes.add(i + 1);
                     }
-                    case CHUNK_TICKING -> {
-                        chunkTickingRules.add(rule);
-                        chunkTickingIndexes.add(i + 1);
-                    }
                 }
             }
         }
 
         DistanceData viewDistanceData = DistanceData.extract(viewDistanceRules, config.getMaxViewDistance(), config.getMinViewDistance());
         DistanceData simDistanceData = DistanceData.extract(simDistanceRules, config.getMaxSimDistance(), config.getMinSimDistance());
-        DistanceData chunkTickingData = DistanceData.extract(chunkTickingRules, config.getMaxChunkTickingDistance(), config.getMinChunkTickingDistance());
 
         int targetViewDistance = viewDistanceData.getTargetDistance(state.currentViewDistance());
         if(targetViewDistance != state.currentViewDistance() && !config.isViewLocked()) {
@@ -64,13 +57,7 @@ public class ViewDistanceHandler {
             setSimDistance(targetSimDistance);
         }
 
-        int targetChunkTicking = chunkTickingData.getTargetDistance(state.currentChunkTickingDistance());
-        if(targetChunkTicking != state.currentChunkTickingDistance() && !config.isChunkTickingLocked()) {
-            TextTools.broadcastIf((p) -> shouldBroadcastChange(p, config), "Changed Chunk-Ticking Distance from %d to %d because of %s.", state.currentChunkTickingDistance(), targetChunkTicking, getRuleCauseString(chunkTickingIndexes));
-            setChunkTickingDistance(targetChunkTicking);
-        }
-
-        int updateRate = IntStream.of(viewDistanceData.updateRate(), simDistanceData.updateRate(), chunkTickingData.updateRate()).min().getAsInt();
+        int updateRate = IntStream.of(viewDistanceData.updateRate(), simDistanceData.updateRate()).min().getAsInt();
         if(updateRate == Integer.MAX_VALUE) {
             updateRate = config.getUpdateRate();
         }
@@ -82,16 +69,16 @@ public class ViewDistanceHandler {
             return "no Rules";
         }
         if(activeIndexes.size() == 1) {
-            String ruleName = config.getRules().get(activeIndexes.get(0) - 1).getName();
+            String ruleName = config.getRules().get(activeIndexes.getFirst() - 1).getName();
             if(ruleName == null) {
-                ruleName = activeIndexes.get(0).toString();
+                ruleName = activeIndexes.getFirst().toString();
             }
             return "Rule " + ruleName;
         }
         StringBuilder sb = new StringBuilder("Rules ");
-        String ruleName1 = config.getRules().get(activeIndexes.get(0) - 1).getName();
+        String ruleName1 = config.getRules().get(activeIndexes.getFirst() - 1).getName();
         if(ruleName1 == null) {
-            ruleName1 = activeIndexes.get(0).toString();
+            ruleName1 = activeIndexes.getFirst().toString();
         }
         sb.append(ruleName1);
         for(int i = 1; i < activeIndexes.size() - 1; i++) {
@@ -101,41 +88,31 @@ public class ViewDistanceHandler {
             }
             sb.append(", ").append(ruleName);
         }
-        String ruleNameN = config.getRules().get(activeIndexes.get(activeIndexes.size() - 1) - 1).getName();
+        String ruleNameN = config.getRules().get(activeIndexes.getLast() - 1).getName();
         if(ruleNameN == null) {
-            ruleNameN = activeIndexes.get(activeIndexes.size() - 1).toString();
+            ruleNameN = activeIndexes.getLast().toString();
         }
         sb.append(" and ").append(ruleNameN);
         return sb.toString();
     }
 
     public static void setViewDistance(int chunks) {
-        AdaptiveViewMod.getServer().getPlayerManager().setViewDistance(chunks);
+        AdaptiveViewMod.getServer().getPlayerList().setViewDistance(chunks);
     }
 
     public static void setSimDistance(int chunks) {
-        AdaptiveViewMod.getServer().getPlayerManager().setSimulationDistance(chunks);
+        AdaptiveViewMod.getServer().getPlayerList().setSimulationDistance(chunks);
     }
 
     public static int getViewDistance() {
-        return AdaptiveViewMod.getServer().getPlayerManager().getViewDistance();
+        return AdaptiveViewMod.getServer().getPlayerList().getViewDistance();
     }
 
     public static int getSimDistance() {
-        return AdaptiveViewMod.getServer().getPlayerManager().getSimulationDistance();
+        return AdaptiveViewMod.getServer().getPlayerList().getSimulationDistance();
     }
 
-    private static int chunkTickingDistance = 8;
-
-    public static int getChunkTickingDistance() {
-        return chunkTickingDistance;
-    }
-
-    public static void setChunkTickingDistance(int chunks) {
-        chunkTickingDistance = chunks;
-    }
-
-    public static boolean shouldBroadcastChange(ServerPlayerEntity player, Config config) {NotificationState state = NotificationState.getFromPlayer(player, config.getBroadcastChanges());
+    public static boolean shouldBroadcastChange(ServerPlayer player, Config config) {NotificationState state = NotificationState.getFromPlayer(player, config.getBroadcastChanges());
         if(state == NotificationState.ADDED) {
             return true;
         }
@@ -145,7 +122,7 @@ public class ViewDistanceHandler {
         return switch(config.getBroadcastChangesDefault()) {
             case ALL -> true;
             case NONE -> false;
-            case OPS -> AdaptiveViewMod.getServer().getPlayerManager().isOperator(player.getPlayerConfigEntry());
+            case OPS -> AdaptiveViewMod.getServer().getPlayerList().isOp(player.nameAndId());
         };
     }
 }
